# skill-swarm-mcp

./: .env.example  .gitignore  .mcp.json  README.md  TOOLS.md  pyproject.toml
skill/: SKILL.md
skill/references/: cherry-pick-patterns.md  discovery-protocol.md  trusted-registries.md
src/skill_swarm/: __init__.py  config.py  models.py  server.py
src/skill_swarm/core/: cache.py  installer.py  matcher.py  registry.py  scanner.py  trust.py  usage.py
src/skill_swarm/tools/: cherry_pick.py  install.py  inventory.py  search.py
tests/: test_core.py  test_e2e_effectiveness.py  test_e2e_v2.py
