[project]
name = "skill-swarm"
version = "1.0.0"
description = "MCP server + skill controller for AI agent skill discovery, installation, and cherry-pick context extraction"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "rapidfuzz>=3.0.0",
]

[project.scripts]
skill-swarm = "skill_swarm.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_swarm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
